fix demo layout and collapsed behavior

--- a/projects/ngx-query-builder-demo/src/app/app.component.less
+++ b/projects/ngx-query-builder-demo/src/app/app.component.less
@@ -3,12 +3,8 @@
 
   .content {
     display: flex;
+    flex-direction: column;
     gap: 20px;
-    justify-content: center;
-  }
-
-  ngx-query-builder, .panel {
-    flex: 1;
   }
 }
 
